# litebot

./: .gitignore  Makefile  README.md  TODO  package.json  pyproject.toml  pytest.ini  requirements.txt  test_timing.py
.github/workflows/: cross-platform-tests.yml  pypi.yml  tag-version.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: ChatMessages.vue  ToolCallMessage.vue  ToolStatusPanel.vue
frontend/src/components/tool-calls/: SearchSkillCall.vue  UseSkillCall.vue
frontend/src/components/tool-status/: ShellToolStatus.vue  SkillToolStatus.vue
iribot/: .env.example  agent.py  cli.py  config.py  executor.py  main.py  prompt_generator.py
iribot/templates/: system_prompt.j2
iribot/tools/: __init__.py  execute_command.py  execute_command_flow.md  skills.py  skills_status.py  test_exec.py
tests/: __init__.py  conftest.py  test_executor.py  test_file_tools.py  test_prompt_and_status.py  test_session_manager.py  test_shell_tools.py  test_skills.py
