[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iribot"
version = "0.1.1"
description = "Full-stack AI agent with Python backend and Vue frontend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "pillow>=10.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "aiofiles>=23.0.0",
  "jinja2>=3.0.0",
]

[project.scripts]
iribot = "iribot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iribot*"]

[tool.setuptools.package-data]
iribot = ["templates/*.j2", "static/**", ".env.example"]
