[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iridet-bot"
version = "0.1.1-alpha.4"
description = "Full-stack AI agent with Python backend and Vue frontend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "pillow>=10.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "aiofiles>=23.0.0",
  "jinja2>=3.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-timeout>=2.1.0",
]

[project.scripts]
iribot = "iribot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iribot*"]

[tool.setuptools.package-data]
iribot = ["templates/*.j2", "static/**", ".env.example"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --tb=short"
markers = [
  "slow: marks tests as slow",
  "windows_only: marks tests as Windows-specific",
  "unix_only: marks tests as Unix-specific",
]
[tool.coverage.run]
source = ["iribot"]
parallel = true
relative_files = true
branch = true

[tool.coverage.paths]
source = [
  "iribot/",
  "D:\\a\\iribot\\iribot\\iribot\\",
  "/home/runner/work/iribot/iribot/iribot/",
  "/Users/runner/work/iribot/iribot/iribot/",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
